team-setup/templates/ingress/06-middleware.yaml
---
# Combines all middlewares
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-middlewares
spec:
  chain:
    middlewares:
    - name: traefik-cleanheaders
---
# clean headers
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-cleanheaders
spec:
  headers:
    customResponseHeaders:
      x-powered-by: ""
      server: ""
